# restaurant

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README  README.md  requirements.txt  setup.cfg  tox.ini
app/config/: settings.py  urls.py  wsgi.py
app/restaurants/: models.py  serializers.py  tests.py  urls.py  viewsets.py
app/restaurants/migrations/: 0001_initial.py
requirements/: base.txt  test.txt
restaurant/config/: settings.py  urls.py
restaurant/restaurants/: admin.py  tests.py  urls.py  viewsets.py
restaurant/restaurants/migrations/: 0001_initial.py
