[metadata]
name = restaurant
description = A simple Django REST API to CRUD restaurants
version = 0.1.0
author = Thomas PERROT
url = https://github.com/thomasperrot/restaurant
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
license = MIT License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    Django
    djangorestframework
    drf-yasg

[options.extras_require]
dev =
    tox
    black
    isort

test =
    coverage

lint =
    black
    flake8
    isort
    mypy
    check-manifest

[options.packages.find]
include =
    restaurant
    restaurant.*

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=120
not_skip = __init__.py

[flake8]
max-line-length = 120

[mypy-rest_framework.*,django.*,drf_yasg.*]
ignore_missing_imports = True

[mypy-*.migrations.*]
ignore_errors = True

[coverage:report]
omit=
    restaurant/config/wsgi.py
    restaurant/manage.py